fix: jdk17 requires some packages to be exposed for test